Logo Changes & Minor Fixes

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://i.imgur.com/Do9TlC0.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Revo</title>
+    <title>Rev-Vote</title>
+    <style>
+      .logo-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px; /* Adjust as needed */
+      }
+
+      .logo {
+        max-width: 200px; /* Set a reasonable max width */
+        height: auto; /* Maintain aspect ratio */
+      }
+    </style>
   </head>
   <body>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
